# quick-note

./: Cargo.toml  README.md
src/: file_handling.rs  helpers.rs  interface.rs  main.rs  utils.rs
